--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <script>
         function openConfiguration() {
             // Replace with your ESP32's access point (AP) credentials
-            const ssid = "ESP32_SSID";
-            const password = "ESP32_PASSWORD";
+            const ssid = "SSID";
+            const password = "PASSWORD";
 
             alert(`Please connect your device to the Wi-Fi network:\n\nSSID: ${ssid}\nPassword: ${password}`);
 
