--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
         <h1>Device Setup</h1>
         <!-- User Manual Button -->
-        <a href="path/to/user-manual.pdf" target="_blank" class="button manual">User Manual</a>
+        <a href="docs/KAVAN_DESAI_resume_updated.pdf" target="_blank" class="button manual">User Manual</a>
         <!-- Configuration Button -->
         <button class="button" onclick="openConfiguration()">Configuration</button>
     </div>
