--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="container">
         <h1>Device Setup</h1>
         <!-- User Manual Button -->
-        <a href="https://hardwareresearchpp.github.io/WCS/docs/KAVAN_DESAI_resume_updated.pdf" target="_blank" class="button manual">User Manual</a>
+        <a href="https://drive.google.com/file/d/1dcJ8WTLo_TbkRx6tJAarNQIb0bGIgkHF/view?usp=sharing" target="_blank" class="button manual">User Manual</a>
         <!-- Configuration Button -->
         <button class="button" onclick="openConfiguration()">Configuration</button>
     </div>
