--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- Configuration Button (Medium) -->
         <button class="button configuration" onclick="openConfiguration()">Configuration Web-Page</button>
         <!-- Download Configuration Application Button with OneDrive link -->
-        <a href="https://1drv.ms/u/c/f8ad922d9f5be25f/EV_iW58tkq0ggPhuMAAAAAAB-voFLNOQ1MK_APB422mt0g?e=i67mPy" target="_blank" class="button download">Download Configuration Application</a>
+        <a href="https://1drv.ms/u/s!Al_iW58tkq34gVLAFo4ADeakeHgJ?e=rcK1Mi" target="_blank" class="button download">Download Configuration Application</a>
     </div>
 
     <script>
