--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <script>
         function openConfiguration() {
             // Replace with your ESP32's access point (AP) credentials
-            const ssid = "SSID";
-            const password = "PASSWORD";
+            const ssid = "Petpooja_WCS_v2";
+            const password = "Petpooja";
 
             alert(`Please connect your device to the Wi-Fi network:\n\nSSID: ${ssid}\nPassword: ${password}`);
             window.location.href = "http://192.168.5.1";
